--- a/index.qmd
+++ b/index.qmd
@@ -8,20 +8,34 @@ sidebar:
 ---
 
 ::: {.container-fluid}
-![](images/banner.png)
+```{=html}
+<div class="p-5 mb-4 bg-light rounded-3 bgimg">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Custom jumbotron</h1>
+    <p class="col-md-8 fs-4 hero-quote">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+    <button class="btn btn-primary btn-lg" type="button">Example button</button>
+  </div>
+</div>
+
+<style type="text/css">
+.bgimg {
+  background-image: url('images/hero.jpg');
+}
+.hero-quote {
+  font-family: "Zilla Slab Highlight";
+}
+</style>
+```
 :::
 
-
-::: {.container}
+:::: {.container}
 ::: {.grid}
 
 ::: {.g-col-4}
 # Hello, I am Daniel Kapitan.
-
 :::
 
 ::: {.g-col-8}
-
 # 
 I am a data architect and AI advisor who helps organizations create sustainable change by systematically engineering data that is required for new AI applications. As a consultant, my approach is centered on delivering measurable results by developing customized solutions that meet the specific needs and goals of your organization. With my expertise in machine learning, I can help you extract valuable insights from your data that can inform strategic decisions, optimize operations, and identify new opportunities for growth.
 
@@ -44,22 +58,6 @@ I am a data architect and AI advisor who helps organizations create sustainable 
 </script>
 <!-- end Google Calendar Appointment Scheduling -->
 ```
-
-
-
-<!-- I am a data architect and AI advisor who helps organizations create sustainable change by [:systematically engineering data](#x-data-centric-ai) that is required for new AI applications.As a consultant, my approach is centered on delivering measurable results by developing customized solutions that meet the specific needs and goals of your organization. With my expertise in machine learning, I can help you extract valuable insights from your data that can inform strategic decisions, optimize operations, and identify new opportunities for growth.
-
-I work with organizations of all sizes and across a variety of industries, and I pride myself on my collaborative and client-focused approach. I believe that success is achieved through close collaboration, and I work closely with my clients to ensure that we achieve the best possible results together.
-
-Whether you are looking to implement machine learning for the first time or seeking to take your data analytics to the next level, I am here to help. Contact me today to learn more about how I can help your organization harness the power of machine learning and AI to achieve your strategic objectives.
-
-## :x data centric ai
-
-This approach is known as data-centric AI. Read more on [https://datacentricai.org/](https://datacentricai.org/) -->
-
-:::
-
 :::
 :::
-
-
+::::
