--- a/src/blog/posts/comet-chart.qmd
+++ b/src/blog/posts/comet-chart.qmd
@@ -12,7 +12,7 @@ categories: [visualization, coding]
 
 [Zan Armstrong’s comet chart](https://www.zanarmstrong.com/#/infovisresearch/) has been on my list of hobby projects for a while now. I think it is an elegant solution to visualize statistical mix effects and address Simpson’s paradox, and particularly useful when working with longitudinal data involving different sub-populations. Recently I found a good excuse to spend some time to actually use it as part of a exploratory data analysis on a project.
 
-Since I mostly work in Python and have recently fallen in love with [Altair](https://altair-viz.github.io/index.html) — for the same reasons as [Fernando explains here](http://fernandoi.cl/blog/posts/altair/) — I wondered how the comet chart could be implemented using the [grammar of interactive graphics](https://idl.cs.washington.edu/papers/vega-lite/). It took me a while to figure out how to actually plot the comets. In a previous version, I had [drawn glyphs using Boke](https://github.com/dkapitan/comet-chart/blob/master/comet-chart.ipynb). While Altair allows you to plot any SVG path in a graph, this felt a bit hacky and not quite in line with the philosophy of using a grammar of graphics.
+Since I mostly work in Python and have recently fallen in love with [Altair](https://altair-viz.github.io/index.html) — for the same reasons as [Fernando explains here](http://fernandoi.cl/blog/posts/altair/) — I wondered how the comet chart could be implemented using the [grammar of interactive graphics](https://idl.cs.washington.edu/papers/vega-lite/). It took me a while to figure out how to actually plot the comets. In a previous version, I had [drawn glyphs using Bokeh](https://github.com/dkapitan/comet-chart/blob/master/comet-chart.ipynb). While Altair allows you to plot any SVG path in a graph, this felt a bit hacky and not quite in line with the philosophy of using a grammar of graphics.
 
 Thankfully [Mattijn was quick to suggest using trail-marks](https://github.com/altair-viz/altair/issues/2395#issuecomment-766454328), after which it was almost as easy as pie. So here’s an example using a dataset of 20,000 flights for 59 destination airports.
 
