--- a/src/blog/posts/podcast-dataloog-datasolidariteit.qmd
+++ b/src/blog/posts/podcast-dataloog-datasolidariteit.qmd
@@ -1,7 +1,7 @@
 ---
 title: Podcast bij de Dataloog
 subtitle: Interview door Harm Bodewes en Jurjen Helmus
-description: Een heerlijk Socratisch gesprek over datasolidariteit
+description: Een heerlijk Socratisch gesprek over datasolidariteit.
 author: Daniel Kapitan
 date: 2023-05-18
 date-format: short
