--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,7 @@ sidebar:
     - logo: images/@kapitan-logo-redbrick-320x132.png
       style: "docked"
       search: true
+toc: false
 # page-layout: custom
 ---
 
@@ -46,7 +47,7 @@ sidebar:
 ::: {.grid}
 
 ::: {.g-col-4}
-# Hello, I am Daniel Kapitan.
+# "Hello, I am Daniel Kapitan."
 :::
 
 ::: {.g-col-8}
@@ -101,7 +102,7 @@ Whether you are looking to implement machine learning for the first time or seek
 ::: {.g-col-6}
 ```{=html}
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="images/alexander-grey-TZZwC_xsClY-unsplash.jpg" alt="Card image cap">
+  <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Service offering 2</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
