--- a/src/projects/project-1.qmd
+++ b/src/projects/project-1.qmd
@@ -5,22 +5,33 @@ title: MyTomorrows
 Story about MyTomorrows ...
 
 ```{=html}
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExample" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExample" data-slide-to="1"></li>
+  </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="/images/profile-photo-34A7526.jpg" class="d-block w-100" alt="profile photo 1">
+      <!-- <div class="carousel-caption d-none d-md-block">
+        <h3>Caption 3 heading</h3>
+        <p>Some text</p>
+      </div> -->
     </div>
-    <div class="carousel-item">
-      <img src="/images/voorkeur_34A7355-lowres.jpg" class="d-block w-100" alt="profie photo 2">
-    </div>
+  <div class="carousel-item">
+    <img src="/images/voorkeur_34A7355-lowres.jpg" class="d-block w-100" alt="profie photo 2">
+      <!-- <div class="carousel-caption d-none d-md-block">
+        <h3>Caption 3 heading</h3>
+        <p>Some text again</p>
+      </div> -->
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 ```
