--- a/src/about.qmd
+++ b/src/about.qmd
@@ -23,10 +23,10 @@ With a PhD in physics from University of Oxford and currently Fellow at the Eind
 
 Daniel starts when organizations are ready to embark on their digital journey, and finishes when people are enabled to continue to work with data and AI by themselves.
 
-## Roles that I fulfill
+### Roles that I fulfill
 Daniel works as an advisor, architect, lecturer, applied researcher and mentor. He is one of the few specialists in the Netherlands who has the unique combination of corporate experience, scientific research and executive education. Through these various roles he aims to apply ‘AI for good’. He lectures on data and AI, publishes regularly and is an active member of the Data Sharing Coalition to foster data solidarity and secure data sharing for tackling societal issues.
 
-## Areas of expertise
+### Areas of expertise
 - data-centric AI
 - knowledge science
 - data architecture
@@ -34,3 +34,12 @@ Daniel works as an advisor, architect, lecturer, applied researcher and mentor. 
 
 Industry focus: healthcare, public sector, as well as scale-ups for which data and AI are a core element of their strategy.
 :::
+
+### Contact details
+
+__email:__ [daniel@kapitan.net](mailto:daniel@kapitan.net) <br>
+__mobile:__ +31 (0)6 2409 7295
+
+#
+
+<a href="https://calendar.google.com/calendar/appointments/AcZssZ3bat8-Gyswn1RmSeowmu2ZAdqkJl9YDoSjNnk=?gv=true" class="btn btn-primary btn-lg active" role="button">Book an appointment</a>
