--- a/index.qmd
+++ b/index.qmd
@@ -84,37 +84,31 @@ Whether you are looking to implement machine learning for the first time or seek
 <!-- end Google Calendar Appointment Scheduling -->
 ```
 # 
-
-:::: {.container}
-::: {.grid}
-
-::: {.g-col-6}
 ```{=html}
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">Service offering 1</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="card-group">
+  <div class="card">
+    <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Mentoring & coaching</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Architecture</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Organizational development</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
   </div>
 </div>
 ```
-:::
-::: {.g-col-6}
-```{=html}
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">Service offering 2</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-```
-:::
-
-:::
-::::
-
-
-
