Fix vka-profile, add button, fix scss

--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ format:
   <div class="container-fluid py-5">
     <h1 class="display-5 fw-bold">Looking to do more with data and AI?</h1>
     <p class="col-md-8 fs-4 hero-quote">As a data scientist, AI expert, architect, advisor, lecturer and mentor, I help people and organizations master data and AI in different roles, ultimately to create sustainable change with digital technologies.</p>
-    <button class="btn btn-primary btn-lg" type="button">See what I have to offer</button>
+    <a href="src/services/index.html" class="btn btn-primary btn-lg" type="button">See what I have to offer</a>
   </div>
 </div>
 
@@ -33,12 +33,6 @@ format:
   /* font-family: "Zilla Slab Highlight"; */
   font-style: bold !important;
   color: white !important;
-}
-
-.btn-primary {
-  background-color: #ff4f5e;
-  border-color: #ff4f5e;
-  font-family: "Inter";
 }
 </style>
 ```
@@ -64,25 +58,6 @@ I work with organizations of all sizes and across a variety of industries, and I
 
 Whether you are looking to implement machine learning for the first time or seeking to take your data analytics to the next level, I am here to help. Contact me today to learn more about how I can help your organization harness the power of machine learning and AI to achieve your strategic objectives.
 
-```{=html}
-<!-- Google Calendar Appointment Scheduling begin -->
-<link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
-<script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
-<script>
-(function() {
-  var target = document.currentScript;
-  window.addEventListener('load', function() {
-    calendar.schedulingButton.load({
-      url: 'https://calendar.google.com/calendar/appointments/AcZssZ3bat8-Gyswn1RmSeowmu2ZAdqkJl9YDoSjNnk=?gv=true',
-      color: '#ff4f5e',
-      label: 'Book an appointment',
-      target,
-    });
-  });
-})();
-</script>
-<!-- end Google Calendar Appointment Scheduling -->
-```
 # 
 ```{=html}
 <div class="card-group">
@@ -111,4 +86,8 @@ Whether you are looking to implement machine learning for the first time or seek
     </div>
   </div>
 </div>
+```
+#
+```{=html}
+<a href="src/calendar.html" class="btn btn-primary btn-lg" type="button">Book an appointment</a>
 ```
