--- a/src/about.qmd
+++ b/src/about.qmd
@@ -27,12 +27,10 @@ Daniel starts when organizations are ready to embark on their digital journey, a
 Daniel works as an advisor, architect, lecturer, applied researcher and mentor. He is one of the few specialists in the Netherlands who has the unique combination of corporate experience, scientific research and executive education. Through these various roles he aims to apply ‘AI for good’. He lectures on data and AI, publishes regularly and is an active member of the Data Sharing Coalition to foster data solidarity and secure data sharing for tackling societal issues.
 
 ### Areas of expertise
-- data-centric AI
-- knowledge science
-- data architecture
-- federated learning 
+Explainable AI, physics-informed machine learning, data-centric AI, data architecture, federated learning, knowledge science, data commons.
 
-Industry focus: healthcare, public sector, as well as scale-ups for which data and AI are a core element of their strategy.
+### Industry focus
+Healthcare, public sector, as well as scale-ups for which data and AI are a core element of their strategy.
 :::
 
 ### Contact details
