Revert about me to black & white

--- a/src/about.qmd
+++ b/src/about.qmd
@@ -3,7 +3,7 @@ title: "About me"
 about:
     id: hero-heading
     template: solana
-    image: ../images/vka-profile-colour.png
+    image: ../images/vka-profile.png
     links:
         - icon: linkedin
           text: LinkedIn
