Add hero images

--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ toc: false
 
 <style type="text/css">
 .bgimg {
-  background-image: url('images/hero.jpg');
+  background-image: url('images/hero-extended.png');
 }
 .hero-quote {
   font-family: "Zilla Slab";
@@ -58,27 +58,27 @@ Whether you are looking to implement machine learning for the first time or seek
 ```{=html}
 <div class="card-group">
   <div class="card">
-    <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
+    <img class="card-img-top" src="images/mathieu-stern-nDDVQzkc_fc-unsplash.jpg" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Mentoring & coaching</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">AI concepting & development</h5>
+      <p class="card-text">Impactful AI applications require a lot more than just predicting something. How accurate are the predictions? Do we understand which factors drive a prediction? Can we relate the AI model to physical systems and domain expertise?</p>
+      <p class="card-text"><small class="text-muted"><a href="src/services/ai-concepting.html">Read more ></a></small></p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
+    <img class="card-img-top" src="images/fayette-reynolds-hYZRBIhf1bI-unsplash.jpg" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Architecture</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Data-centric AI</h5>
+      <p class="card-text">systematically engineering the data required to build AI systems.</p>
+      <p class="card-text"><small class="text-muted"><a href="src/services/data-centric-ai.html">Read more ></a></small></p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="images/tim-mossholder-bo3SHP58C3g-unsplash.jpeg" alt="Card image cap">
+    <img class="card-img-top" src="images/hero-speaking.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Organizational development</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Coaching, mentoring, teaching and public speaking</h5>
+      <p class="card-text">I help professionals — at all levels — to master data and AI.</p>
+      <p class="card-text"><small class="text-muted"><a href="src/services/coaching.html">Read more ></a></small></p>
     </div>
   </div>
 </div>
