--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,6 @@ toc: false
 <div class="p-5 mb-4 bg-light rounded-3 bgimg">
   <div class="container-fluid py-5">
     <h1 class="display-5 fw-bold">Looking to do more with data and AI?</h1>
-    <p class="col-md-8 fs-4 hero-quote">As a data scientist, AI expert, architect, advisor, lecturer and mentor, I help people and organizations master data and AI in different roles, ultimately to create sustainable change with digital technologies.</p>
     <a href="src/services/index.html" class="btn btn-primary btn-lg" type="button">See what I have to offer</a>
   </div>
 </div>
@@ -38,17 +37,21 @@ toc: false
 :::: {.container}
 ::: {.grid}
 
-::: {.g-col-4}
-# "Hello. I am Daniel Kapitan."
+:::{.g-col-2}
 :::
 
 ::: {.g-col-8}
-# 
-I am well-rounded data scientist and strategic advisor with years of experience in the field of data, machine learning and digital transformation. With this knowledge, I help organizations to identify how to use AI, and how to integrate this into business processes, roles, and day-to-day operations. My personal drive is to create sustainable change by systematically engineering data that is required for new AI applications.
+### "As a data scientist and AI expert I help people master data and AI, ultimately to create sustainable change with digital technologies."
+:::
+
+::: {.g-col-2}
+:::
 
 :::
-:::
 ::::
+
+# 
+I am well-rounded data scientist and strategic advisor with years of experience in the field of data, machine learning and digital transformation. With this knowledge, I help organizations to identify how to use AI, and how to integrate this into business processes, roles, and day-to-day operations. My personal drive is to create sustainable change by systematically engineering data that is required for new AI applications.
 
 I work with organizations of all sizes and across a variety of industries, and I pride myself on my collaborative and client-focused approach. I believe that success is achieved through close collaboration, and I work closely with my clients to ensure that we achieve the best possible results together.
 
@@ -60,23 +63,23 @@ Whether you are looking to implement machine learning for the first time or seek
   <div class="card">
     <img class="card-img-top" src="images/mathieu-stern-nDDVQzkc_fc-unsplash.jpg" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">AI concepting & development</h5>
-      <p class="card-text">Impactful AI applications require a lot more than just predicting something. How accurate are the predictions? Do we understand which factors drive a prediction? Can we relate the AI model to physical systems and domain expertise?</p>
+      <h5 class="card-title">Applied AI for products & services</h5>
+      <p class="card-text">Impactful AI applications require a lot more than just predicting something.</p>
       <p class="card-text"><small class="text-muted"><a href="src/services/ai-concepting.html">Read more ></a></small></p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="images/fayette-reynolds-hYZRBIhf1bI-unsplash.jpg" alt="Card image cap">
+    <img class="card-img-top" src="images/hero-data-centric-ai.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Data-centric AI</h5>
-      <p class="card-text">systematically engineering the data required to build AI systems.</p>
+      <p class="card-text">Systematically engineering the data required to build AI systems.</p>
       <p class="card-text"><small class="text-muted"><a href="src/services/data-centric-ai.html">Read more ></a></small></p>
     </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="images/hero-speaking.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Coaching, mentoring, teaching and public speaking</h5>
+      <h5 class="card-title">Coaching and public speaking</h5>
       <p class="card-text">I help professionals — at all levels — to master data and AI.</p>
       <p class="card-text"><small class="text-muted"><a href="src/services/coaching.html">Read more ></a></small></p>
     </div>
