--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,7 @@ toc: false
 <div class="p-5 mb-4 bg-light rounded-3 bgimg">
   <div class="container-fluid py-5">
     <h1 class="display-5 fw-bold">Looking to do more with data and AI?</h1>
-    <a href="src/services/index.html" class="btn btn-primary btn-lg" type="button">See what I have to offer</a>
+    <a href="src/calendar.html" class="btn btn-primary btn-lg" type="button">Book an appointment</a>
   </div>
 </div>
 
