--- a/index.qmd
+++ b/index.qmd
@@ -1,21 +1,29 @@
 ---
-sidebar:
-    - logo: images/@kapitan-logo-redbrick-320x132.png
-      style: "docked"
-      search: true
 toc: false
 ---
 
 ::: {.container-fluid}
 ```{=html}
 <div class="p-5 mb-4 bg-light rounded-3 bgimg">
+  <!-- <p class="lead">
+   APPLIED AI &emsp; | &emsp; DATA-CENTRIC AI &emsp; | &emsp; COACHING & PUBLIC SPEAKING
+  </p> -->
+  <br>
   <div class="container-fluid py-5">
     <h1 class="display-5 fw-bold">Looking to do more with data and AI?</h1>
-    <a href="src/calendar.html" class="btn btn-primary btn-lg" type="button">Book an appointment</a>
+    <!-- <a href="src/calendar.html" class="btn btn-primary btn-lg" type="button">Book an appointment</a> -->
   </div>
+  <br><br><br><br><br>
 </div>
-
+<p class="lead">
+   <small class="text-muted">APPLIED AI &emsp; | &emsp; DATA-CENTRIC AI &emsp; | &emsp; COACHING & PUBLIC SPEAKING</small>
+</p>
 <style type="text/css">
+.lead {
+    font-family: "Zilla Slab";
+    text-align: center;
+}
+
 .bgimg {
   background-image: url('images/hero-extended.png');
 }
