--- a/index.qmd
+++ b/index.qmd
@@ -5,15 +5,11 @@ toc: false
 ::: {.container-fluid}
 ```{=html}
 <div class="p-5 mb-4 bg-light rounded-3 bgimg">
-  <!-- <p class="lead">
-   APPLIED AI &emsp; | &emsp; DATA-CENTRIC AI &emsp; | &emsp; COACHING & PUBLIC SPEAKING
-  </p> -->
-  <br>
+  <br><br><br><br>
   <div class="container-fluid py-5">
-    <h1 class="display-5 fw-bold">Looking to do more with data and AI?</h1>
+    <h1 class="display-5 fw-bold">Looking<br>to do more<br>with data and AI?</h1>
     <!-- <a href="src/calendar.html" class="btn btn-primary btn-lg" type="button">Book an appointment</a> -->
   </div>
-  <br><br><br><br><br>
 </div>
 <p class="lead">
    <small class="text-muted">APPLIED AI &emsp; | &emsp; DATA-CENTRIC AI &emsp; | &emsp; COACHING & PUBLIC SPEAKING</small>
@@ -49,7 +45,7 @@ toc: false
 :::
 
 ::: {.g-col-8}
-### "As a data scientist and AI expert I help people master data and AI, ultimately to create sustainable change with digital technologies."
+### "As a data scientist and AI expert I can help you create sustainable change with digital technologies."
 :::
 
 ::: {.g-col-2}
