--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,7 @@ toc: false
   </div>
 </div>
 <p class="lead">
-   <small class="text-muted">DATA-CENTRIC ARCHITECTURE &emsp; | &emsp; APPLIED AI &emsp; | &emsp; COACHING & PUBLIC SPEAKING</small>
+   <small class="text-muted">DATA-CENTRIC AI &emsp; | &emsp; APPLIED AI &emsp; | &emsp; COACHING & PUBLIC SPEAKING</small>
 </p>
 <style type="text/css">
 .lead {
@@ -54,54 +54,107 @@ toc: false
 
 :::
 ::::
-
 # 
-Many people continue to have high expections of what data & AI can bring. Yet, the majority of organizations struggle to capture real value from  data and AI-driven innovations. Studies have shown that up to 95% of such innovations never make it past the proof of concept stage into full-scale operations.
+Many people continue to have high expections of what data & AI can bring. Yet, the majority of organizations struggle to capture real value from  data and AI-driven innovations. Studies have shown that up to 95% of such innovations never make it past the proof-of-concept stage into full-scale operations.
 
-The key towards creating sustainable change with digital technologies lies in increasing your the data literacy of yourself and your organization, such that applications of AI can be developed in the right context. As a data architect and AI expert I can help you 
+The key towards creating sustainable change with digital technologies lies in increasing your the data literacy of yourself and your organization, such that applications of AI can be developed in the right context. As a data architect and AI expert I can help you.
 
-### Applied AI
-...
+<br><br>
 
+:::: {.container}
+::: {.grid}
+::: {.g-col-8}
 
 ### Data-centric AI
-...
+
+Data sit at the core of digital business transformation. As machine learning algorithms mature, the biggest challenge in making AI work is to improve the quality and scale of the data required to train AI. In our experience most AI projects fail because existing data platforms lack the reliability, flexibility and performance to effectively develop and deploy AI systems. We systematically engineer data so it can be used by AI systems. To improve your systems, drive innovation and enable data-based decision intelligence. We call that data-centric AI.
+
+<small class="text-muted">Data Architecture | MLOps (Machine Learning Operations) | Federated Learning | Privacy-Enhancing Technologies.</small>
+:::
+
+:::{.g-col-4}
+![](images/noun_timeline_3087192_L.png)
+:::
+:::
+::::
+
+<br><br>
+
+:::: {.container}
+::: {.grid}
+::: {.g-col-4}
+![](images/generative-ai.png)
+:::
+
+::: {.g-col-8}
+### Applied AI
+The possibilities of AI are virtually endless and can fundamentally change the way you run your business or lead your organisation. It changes business strategies, policies as well as the behaviour of your teams. If your company embarks on integrating AI, it needs to do what is relevant and what you want it for. We developed impactful AI applications that are accurate. We take into account the factors that drive the predictions and relate it to physical systems and domain expertise. And help you transform and drive AI innovation in your services or products.
+
+<small class="text-muted">Explainable AI | Generative AI & Large Language Models | Physics-Informed Machine Learning.</small> 
+:::
+:::
+::::
+
+<br><br>
+
+:::: {.container}
+::: {.grid}
+::: {.g-col-8}
+### Coaching & mentoring
+
+Data and AI will fundamentally change your business, your organisation and your way of working. And not all employees or staff are immediately ready for this. We teach, coach and mentor professionals who require a better understanding of data and artificial intelligence. And make them both comfortable and topic-specialists. For larger audiences, we create workshops or provide key-note speakers so more and more professionals obtain a better understanding of data and AI.
+
+<small class="text-muted">One-the-job coaching for individuals and teams | Masterclasses for management and executives | Technical deep-dives for experts.</small> 
+:::
+
+::: {.g-col-4}
+![](images/noun-mentor-1132387.png)
+:::
+:::
+::::
 
 
-### Coaching and public speaking
-...
-
-
-# 
 ```{=html}
-<div class="card-group">
-  <div class="card">
-    <img class="card-img-top" src="images/mathieu-stern-nDDVQzkc_fc-unsplash.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Applied AI for products & services</h5>
-      <p class="card-text">Impactful AI applications require a lot more than just predicting something.</p>
-      <p class="card-text"><small class="text-muted"><a href="src/services/ai-concepting.html">Read more ></a></small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="images/hero-data-centric-ai.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Data-centric AI</h5>
-      <p class="card-text">Systematically engineering the data required to build AI systems.</p>
-      <p class="card-text"><small class="text-muted"><a href="src/services/data-centric-ai.html">Read more ></a></small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="images/hero-speaking.png" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Coaching and public speaking</h5>
-      <p class="card-text">I help professionals — at all levels — to master data and AI.</p>
-      <p class="card-text"><small class="text-muted"><a href="src/services/coaching.html">Read more ></a></small></p>
-    </div>
+<div class="p-5 mb-4 bg-light rounded-3 bgimg2">
+  <br><br><br><br>
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Masterclasses<br>& public speaking</h1>
   </div>
 </div>
+
+<style type="text/css">
+.lead {
+    font-family: "Zilla Slab";
+    text-align: center;
+}
+
+.bgimg2 {
+  background-image: url('images/hero-speaking.png');
+}
+.hero-quote {
+  font-family: "Zilla Slab";
+  font-color: white;
+  color: white;
+}
+
+.fw-bold {
+  /* font-family: "Zilla Slab Highlight"; */
+  font-style: bold !important;
+  color: white !important;
+}
+</style>
 ```
-#
+<br>
+
+### Masterclass
+We provide masterclasses on topics related to data & AI. It provides a fundamental basis from basics to concepting, even implementation. More specifically we specialise in bespoke masterclasses, built around your organisation and focussing on how AI  can change your business.
+
+TO DO: add logos Skipr, AKD boeklancering, DHD, EAISI, Hooghiemstra & Partners
+
+### Public speaking
+
+TO DO: add logos Nederlandse Vereniging van Ziekenhuis Apothekers, Mobile Healthcare Congres, Data-Driven Healthcare Congres, Samen Digitaal Belgie
+
 ```{=html}
 <a href="src/calendar.html" class="btn btn-primary btn-lg" type="button">Book an appointment</a>
 ```
