--- a/src/projects/posts/mytomorrows.qmd
+++ b/src/projects/posts/mytomorrows.qmd
@@ -2,10 +2,7 @@
 title: MyTomorrows TrialSearch AI
 description: |
     Pre-screening of patient eligibility for clinical trials using large language models.
-author: Daniel Kapitan
-date: 2023-03-10
-date-format: short
-image: /images/trialsearch-ai.jpg
+image: /images/mytomorrows.png
 categories: [english, generative AI, healthcare]
 ---
 
