Update algemene voorwaarden

--- a/src/contact.qmd
+++ b/src/contact.qmd
@@ -18,4 +18,4 @@ __Chamber of Commerce (KvK):__ 52920259<br>
 __RSIN:__ 850665851<br>
 __IBAN:__ NL47 KNAB 0259 5268 27
 
-__Terms & Conditions__ in [Dutch](/resources/200402-algemene-voorwaarden.pdf).
+__Terms & Conditions__ in [Dutch](/resources/230901-algemene-voorwaarden-%40kapitan.pdf).
