Fix path image about me

--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ toc: false
 about:
     id: about-me
     template: solana
-    image: ../images/vka-profile.png
+    image: /images/vka-profile.png
 ---
 
 ::: {.container-fluid}
