--- a/contact.qmd
+++ b/contact.qmd
@@ -12,7 +12,7 @@ DWMM Holding B.V.<br>
 Marie Baronstraat 15 <br>
 3056 AA  ROTTERDAM
 
-### Legal & financial details
+### Legal & financial
 
 __Chamber of Commerce (KvK):__ 52920259<br>
 __RSIN:__ 850665851<br>
