--- a/index.qmd
+++ b/index.qmd
@@ -59,7 +59,7 @@ How? Read on.
 
 Data sit at the core of digital business transformation. As machine learning algorithms mature, the biggest challenge in making AI work is to improve the quality and scale of the data required to train AI. In our experience most AI projects fail because existing data platforms lack the reliability, flexibility and performance to effectively develop and deploy AI systems. We systematically engineer data so it can be used by AI systems. To improve your systems, drive innovation and enable data-based decision intelligence. We call that data-centric AI.
 
-<small class="text-muted">Data Architecture | MLOps (Machine Learning Operations) | Federated Learning | Privacy-Enhancing Technologies.</small>
+<small class="text-muted">Data Architecture | MLOps (Machine Learning Operations) | Federated Learning | Privacy-Enhancing Technologies</small>
 :::
 
 :::{.g-col-4}
@@ -80,7 +80,7 @@ Data sit at the core of digital business transformation. As machine learning alg
 ### Applied AI
 The possibilities of AI are virtually endless and can fundamentally change the way you run your business or lead your organisation. It changes business strategies, policies as well as the behaviour of your teams. If your company embarks on integrating AI, it needs to do what is relevant and what you want it for. We developed impactful AI applications that are accurate. We take into account the factors that drive the predictions and relate it to physical systems and domain expertise. And help you transform and drive AI innovation in your services or products.
 
-<small class="text-muted">Explainable AI | Generative AI & Large Language Models | Physics-Informed Machine Learning.</small> 
+<small class="text-muted">Explainable AI | Generative AI & Large Language Models | Physics-Informed Machine Learning</small> 
 :::
 :::
 ::::
@@ -92,7 +92,7 @@ The possibilities of AI are virtually endless and can fundamentally change the w
 
 Data and AI will fundamentally change your business, your organisation and your way of working. And not all employees or staff are immediately ready for this. We teach, coach and mentor professionals who require a better understanding of data and artificial intelligence. And make them both comfortable and topic-specialists. We specialise in bespoke masterclasses, built around your organisation and focussing on how AI can impact your line business.
 
-<small class="text-muted">One-the-job coaching for individuals and teams | Masterclasses for management and executives | Technical deep-dives for experts.</small> 
+<small class="text-muted">One-the-job coaching for individuals and teams | Challenge-based learning | Technical deep-dives for experts</small> 
 :::
 
 ::: {.g-col-4}
@@ -111,15 +111,19 @@ Data and AI will fundamentally change your business, your organisation and your 
 
 ::: {.g-col-8}
 ### Masterclasses & public speaking
-
 We provide masterclasses on topics related to data & AI. It provides a fundamental basis from basics to concepting, even implementation. For larger audiences, we create workshops or provide key-note speakers so more and more professionals obtain a better understanding of data and AI.
-
-TO DO: add logos Skipr, AKD boeklancering, DHD, EAISI, Hooghiemstra & Partners, Nederlandse Vereniging van Ziekenhuis Apothekers, Mobile Healthcare Congres, Data-Driven Healthcare Congres, Samen Digitaal Belgie
-
+<small class="text-muted">Keynote speeches | Masterclasses for management and executives | Inspirational lectures</small>
 :::
 :::
 ::::
 
+<br>
+
+:::: {#logo-board}
+![](/images/logo-board.png)
+:::
+
+<br>
 
 ```{=html}
 <style>
@@ -130,10 +134,13 @@ TO DO: add logos Skipr, AKD boeklancering, DHD, EAISI, Hooghiemstra & Partners, 
   color: #ffffff;
   border-radius: .3rem !important;
 }
-
+#logo-board {
+  padding-top: 20px;
+  border-radius: .3rem !important;
+  background-color: #ffffff;
+}
 </style>
 ```
-
 
 
 # About me
@@ -170,13 +177,11 @@ Daniel works as an advisor, architect, lecturer, applied researcher and mentor. 
 Explainable AI, physics-informed machine learning, data-centric AI, data architecture, federated learning, knowledge science, data commons.
 
 ### Industry focus
-Healthcare, public sector, OEMs as well as scale-ups for which data and AI are a core element of their strategy.
+Healthcare, public sector, OEMs and scale-ups for which data and AI are a core element of their strategy.
 
 :::
 
-### Previous clients
 
-![](/images/logo-board.png)
 
 
 
