--- a/blog/comet-chart.qmd
+++ b/blog/comet-chart.qmd
@@ -3,7 +3,7 @@ title: Comet charts in Python
 subtitle: Visualizing statistical mix effects and Simpson’s paradox with Altair
 author: Daniel Kapitan
 date: 2021-01-29
-date-format: short
+date-format: "MMM YYYY"
 image: /images/comet-chart.png
 html:
     code-fold: true
