--- a/blog/lartpy.ipynb
+++ b/blog/lartpy.ipynb
@@ -12,7 +12,7 @@
     "description: |\n",
     "    Would it be possible to create a Python project that can generate those pencil-like drawings with random forests, with different types of trees?\", I thought (pun intended). Of course, someone already thought of that and it even has a name: algorithmic botany.\n",
     "date: 2021-04-26\n",
-    "date-format: short\n",
+    "date-format: \"MMM YYYY\"\n",
     "image: /images/lartpy.jpg\n",
     "categories: [english, visualization, generative art, coding]\n",
     "---"
