--- a/index.qmd
+++ b/index.qmd
@@ -49,7 +49,7 @@ Many people continue to have high expections of what data and AI can bring. Yet,
 The key towards creating sustainable change with digital technologies lies in increasing your own data literacy and understanding of AI, and that of your organization. AI is not sci-fi, we need to demystify digital technologies. That way, professionals and domain experts can obtain strategic autonomy to reason, think, imagine en create applications of AI themselves. Technology can only be of value when it is put within the appropriate business, societal or human context. 
 
 How? Read on.
-<br>
+<br><br>
 
 :::: {#light-grey-background}
 ::: {.grid}
@@ -73,7 +73,7 @@ Data sit at the core of digital business transformation. As machine learning alg
 :::: {#applied-ai}
 ::: {.grid}
 ::: {.g-col-4}
-![](images/generative-ai.png)
+![](images/noun-generative-ai.png)
 :::
 
 ::: {.g-col-8}
@@ -85,9 +85,12 @@ The possibilities of AI are virtually endless and can fundamentally change the w
 :::
 ::::
 
+<br>
+
 :::: {#light-grey-background}
 ::: {.grid}
 ::: {.g-col-8}
+
 ### Coaching & mentoring
 
 Data and AI will fundamentally change your business, your organisation and your way of working. And not all employees or staff are immediately ready for this. We teach, coach and mentor professionals who require a better understanding of data and artificial intelligence. And make them both comfortable and topic-specialists. We specialise in bespoke masterclasses, built around your organisation and focussing on how AI can impact your line business.
@@ -112,6 +115,7 @@ Data and AI will fundamentally change your business, your organisation and your 
 ::: {.g-col-8}
 ### Masterclasses & public speaking
 We provide masterclasses on topics related to data & AI. It provides a fundamental basis from basics to concepting, even implementation. For larger audiences, we create workshops or provide key-note speakers so more and more professionals obtain a better understanding of data and AI.
+
 <small class="text-muted">Keynote speeches | Masterclasses for management and executives | Inspirational lectures</small>
 :::
 :::
@@ -129,6 +133,7 @@ We provide masterclasses on topics related to data & AI. It provides a fundament
 <style>
 #light-grey-background {
   padding-top: 35px;
+  padding-bottom: 20px;
   padding-left: 35px;
   background-color: #000000;
   color: #ffffff;
