--- a/blog/analytical-problem-solving.qmd
+++ b/blog/analytical-problem-solving.qmd
@@ -7,7 +7,12 @@ author: Daniel Kapitan
 date: 2022-03-10
 date-format: "MMM YYYY"
 image: /images/logo-american-statistician.png
+toc: false
 categories: [english, modeling]
 ---
 
+#
+
 {{< pdf /resources/demast2023analytical.pdf width=100% height=800 >}}
+
+
