--- a/projects/roetz-life.qmd
+++ b/projects/roetz-life.qmd
@@ -3,7 +3,11 @@ title: Roetz Life
 description: |
     Coaching and desiging of new data platform for the Roetz Life circular e-bike.
 image: /images/roetz-life.jpg
-categories: [english, data architecture, sustainability]
+categories: [data-centric ai, coaching]
 ---
 
-Story about Roetz
+#
+
+![](/images/roetz-landfill.jpg)
+
+Story about Roetz to follow soon.
