--- a/projects/sensire.qmd
+++ b/projects/sensire.qmd
@@ -3,7 +3,9 @@ title: Sensire
 description: |
     Coaching a data science team during the design and implementation of a state-of-the-art data platform for elderly and home care.
 image: /images/sensire.jpg
-categories: [english, data architecture, healthcare]
+categories: [english, data-centric ai]
 ---
 
-Story about Sensire
+#
+
+More to follow soon.
