--- a/projects/amphia.qmd
+++ b/projects/amphia.qmd
@@ -3,9 +3,11 @@ title: Amphia Sensium
 description: |
     Development of algorithms for early warning signals using smart plasters.
 image: /images/amphia-sensium.jpg
-categories: [english, applied AI, mentoring, healthcare]
+categories: [applied AI, mentoring]
 ---
 
-Story about Sensium and Frank
+#
 
-Link to interview (Dutch)
+Stay tuned, more to follow soon.
+
+Meanwhile, read an interview with Frank Niemantsverdriet and myself on how Amphia uses AI to combat scarcity in healthcare ([English](https://www.jads.nl/news/combating-healthcare-scarcity-with-data-what-role-will-your-hospital-play/), [Dutch](https://www.deondernemer.nl/innovatie/advertorial-jads-zorgschaarste-data~4152485)).
