--- a/projects/blue-radix.qmd
+++ b/projects/blue-radix.qmd
@@ -3,7 +3,9 @@ title: Blue Radix
 description: |
     Concepting the next generation AI for autonomous greenhouses.
 image: /images/blue-radix-closeup.jpg
-categories: [english, data architecture, healthcare]
+categories: [data-centric ai, mentoring]
 ---
 
-Story about Sensire
+#
+
+Stay tuned, more to follow soon.
