--- a/projects/pharmaccess.qmd
+++ b/projects/pharmaccess.qmd
@@ -6,4 +6,4 @@ image: /images/pharmaccess-momcare-graphic.jpg
 categories: [english, data architecture, healthcare]
 ---
 
-Story about data commons in Africa ...
+Stay tuned, more to follow soon.
